<resources>
    <string name="application_name" translatable="false">Eternity</string>
    <string name="login_activity_label">Login</string>
    <string name="search_activity_label" translatable="false"> </string>
    <string name="comment_activity_label">Send Comment</string>
    <string name="comment_activity_label_is_replying">Reply</string>
    <string name="post_text_activity_label">Text Post</string>
    <string name="community_selection_activity_label">Select a Community</string>
    <string name="post_link_activity_label">Link Post</string>
    <string name="post_image_activity_label">Image Post</string>
    <string name="post_video_activity_label">Video Post</string>
    <string name="rules_activity_label">Rules</string>
    <string name="search_community_activity_label">Communities</string>
    <string name="edit_post_activity_label">Edit Post</string>
    <string name="edit_comment_activity_label">Edit Comment</string>
    <string name="view_message_activity_label">Inbox</string>
    <string name="settings_activity_label">Settings</string>
    <string name="account_saved_thing_activity_label">Saved</string>
    <string name="create_multi_reddit_activity_label">Create Multicommunity</string>
    <string name="community_multiselection_activity_label">Select Communities</string>
    <string name="custom_theme_listing_activity_label">Custom Themes</string>
    <string name="customize_theme_activity_label">Customize Theme</string>
    <string name="customize_theme_activity_create_theme_label">Create Theme</string>
    <string name="theme_preview_activity_label">Theme Preview</string>
    <string name="edit_multi_reddit_activity_label">Edit Multicommunity</string>
    <string name="selected_subeddits_activity_label">Selected Communities</string>
    <string name="report_activity_label">Report</string>
    <string name="view_imgur_media_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_imgur_media_activity_video_label">Video %1$d/%2$d</string>
    <string name="send_private_message_activity_label">Send PM</string>
    <string name="view_reddit_gallery_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_gif_label">Gif %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_video_label">Video %1$d/%2$d</string>
    <string name="submit_crosspost_activity_label">Crosspost</string>
    <string name="give_award_activity_label">Give Award</string>
    <string name="nsfw">NSFW</string>
    <string name="settings_notification_master_title">Notification</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_interface_title">Interface</string>
    <string name="settings_gestures_and_buttons_title">Gestures &amp; Buttons</string>
    <string name="settings_save_front_page_scrolled_position_title">Save Scrolled Position in HOME</string>
    <string name="settings_save_front_page_scrolled_position_summary">Browse new posts after refreshing in HOME (Front Page, sort type: Best)</string>
    <string name="settings_link_handler_title">Link Handler</string>
    <string name="settigns_video_title">Video</string>
    <string name="settings_immersive_interface_title">Immersive Interface</string>
    <string name="settings_customize_tabs_in_main_page_title">Customize Tabs in Main Page</string>
    <string name="only_for_logged_in_user">Only for Logged-in User</string>
    <string name="settings_enable_bottom_app_bar_title">Enable Bottom Navigation</string>
    <string name="settings_category_post_and_comment_title">Post and Comment</string>
    <string name="settings_vote_buttons_on_the_right_title">Vote Buttons on the Right</string>
    <string name="settings_main_page_back_button_action">Main Page Back Button Action</string>
    <string name="settings_category_comment_title">Comment</string>
    <string name="settings_show_absolute_number_of_votes_title">Show Absolute Number of Votes</string>
    <string name="settings_time_format_title">Time Format</string>
    <string name="settings_category_post_title">Post</string>
    <string name="settings_lazy_mode_interval_title">Lazy Mode Interval</string>
    <string name="settings_font_title">Font</string>
    <string name="settings_nsfw_and_spoiler_title">NSFW &amp; Spoiler</string>
    <string name="settings_about_master_title">About</string>
    <string name="settings_acknowledgement_master_title">Acknowledgement</string>
    <string name="settings_credits_master_title">Credits</string>
    <string name="settings_open_source_title">Open Source</string>
    <string name="settings_open_source_summary">Star it on Codeberg if you like this app</string>
    <string name="settings_rate_title">Rate on Google Play</string>
    <string name="settings_rate_summary">Give me a 5-star rating and I will be really happy</string>
    <string name="settings_email_title">Mastodon</string>
    <string name="settings_email_summary">\@bazsalanszky@fosstodon.org</string>
    <string name="settings_reddit_account_title">Lemmy Account</string>
    <string name="settings_reddit_account_summary">\@bazsalanszky@lemmy.toldi.eu</string>
    <string name="settings_community_title">Community</string>
    <string name="settings_community_summary">!eternityapp@lemdro.id</string>
    <string name="settings_share_title">Share</string>
    <string name="settings_share_summary">Share this app to other people if you enjoy it</string>
    <string name="settings_version_title">Eternity</string>
    <string name="settings_version_summary">Version %s</string>
    <string name="settings_advanced_master_title">Advanced</string>
    <string name="settings_delete_all_communities_data_in_database_title">Delete All Communities in Database</string>
    <string name="settings_delete_all_users_data_in_database_title">Delete All Users in Database</string>
    <string name="settings_delete_all_sort_type_data_in_database_title">Delete All Sort Types in Database</string>
    <string name="settings_delete_all_post_layout_data_in_database_title">Delete All Post Layouts in Database</string>
    <string name="settings_delete_all_themes_in_database_title">Delete All Themes in Database</string>
    <string name="settings_delete_front_page_scrolled_positions_in_database_title">Delete All Front Page Scrolled Positions in Database</string>
    <string name="settings_delete_read_posts_in_database_title">Delete All Read Posts in Database</string>
    <string name="settings_delete_all_legacy_settings_title">Delete All Legacy Settings</string>
    <string name="settings_reset_all_settings_title">Reset All Settings</string>
    <string name="restart_app_see_changes">Restart the app to see the changes</string>
    <string name="settings_download_location_title">Download Location</string>
    <string name="settings_image_download_location_title">Image Download Location</string>
    <string name="settings_gif_download_location_title">Gif Download Location</string>
    <string name="settings_video_download_location_title">Video Download Location</string>
    <string name="settings_separate_folder_for_each_community">Separate Folder for Each Community</string>
    <string name="settings_save_nsfw_media_in_different_folder_title">Save NSFW Media in Different Location</string>
    <string name="settings_nsfw_download_location_title">NSFW Download Location</string>
    <string name="settings_security_title">Security</string>
    <string name="settings_customize_bottom_app_bar_title">Customize Bottom Navigation Bar</string>
    <string name="settings_data_saving_mode">Data Saving Mode</string>
    <string name="settings_translation_title">Translation</string>
    <string name="settings_translation_summary">Translate this app on POEditor. Thanks to all contributors.</string>
    <string name="settings_miscellaneous_title">Miscellaneous</string>
    <string name="settings_post_filter_title">Post Filter</string>
    <string name="settings_hide_community_description_title">Hide Community Description</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_enable_search_history_title">Enable Search History</string>
    <string name="settings_post_history_title">Post History</string>
    <string name="settings_sort_type_title">Sort Type</string>
    <string name="settings_hide_post_type">Hide Post Type</string>
    <string name="settings_hide_post_flair">Hide Post Flair</string>
    <string name="settings_hide_community_and_user_prefix">Hide Community and User Prefix</string>
    <string name="settings_hide_the_number_of_votes">Hide the Number of Votes</string>
    <string name="settings_hide_the_number_of_comments">Hide the Number of Comments</string>
    <string name="settings_show_avatar_on_the_right">Show Avatar on the Right</string>
    <string name="settings_backup_settings_title">Backup Settings</string>
    <string name="settings_backup_settings_summary">The backup file password is \"123321\".</string>
    <string name="settings_restore_settings_title">Restore Settings</string>
    <string name="settings_navigation_drawer_title">Navigation Drawer</string>
    <string name="settings_collapse_account_section_title">Collapse Account Section</string>
    <string name="settings_collapse_reddit_section_title">Collapse Lemmy Section</string>
    <string name="settings_collapse_post_section_title">Collapse Post Section</string>
    <string name="settings_collapse_preferences_section_title">Collapse Preferences Section</string>
    <string name="settings_collapse_favorite_communities_section_title">Collapse Favorite Communities Section</string>
    <string name="settings_collapse_subscribed_communities_section_title">Collapse Subscribed Communities Section</string>
    <string name="settings_hide_favorite_communities_sections_title">Hide Favorite Communities Section</string>
    <string name="settings_hide_subscribed_communities_sections_title">Hide Subscribed Communities Section</string>
    <string name="settings_default_search_result_tab">Default Search Result Tab</string>
    <string name="settings_crash_reports_title">Crash Reports</string>
    <string name="settings_post_details_title">Post Details</string>
    <string name="settings_separate_post_and_comments_in_landscape_mode_title">Separate Post And Comments in Landscape Mode</string>
    <string name="settings_separate_post_and_comments_summary">Video autoplay will be disabled in the post detail page</string>
    <string name="settings_use_bottom_toolbar_in_media_viewer_title">Use Bottom Toolbar in Media Viewer</string>
    <string name="settings_navigation_drawer_enable_hide_karma_title">Hide Account Karma</string>
    <string name="settings_hide_upvote_ratio_title">Hide Upvote Ratio</string>
    <string name="settings_miscellaneous_dangerous_group_title">Dangerous</string>
    <string name="settings_post_feed_max_resolution_warning_title">Increase the value to show previews in higher resolution, but the app may crash unexpectedly.</string>
    <string name="settings_post_feed_max_resolution_title">Post Feed Preview Max Resolution (Width * Height)</string>
    <string name="settings_hide_fab_in_post_feed">Hide FAB in Post Feed</string>
    <string name="anonymous_account_instance">Anonymous Account Instance</string>
    <string name="use_circular_fab">Use Circular FAB</string>
    <string name="separate_down_and_up_votes">Separate Up and Down votes</string>
    <string name="settings_category_community_and_user_pages_title">Community and User pages</string>
    <string name="settings_show_statistics">Show Statistics</string>
    <string name="settings_show_post_and_comment_score">Show post and comment scores</string>
    <string name="share_links_on_your_local_instance_rather_than_the_original_creation_instance">Share links on your local instance rather than the original creation instance.</string>
    <string name="share_links_on_your_local_instance">Share links on your local instance</string>
</resources>