<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="delete_all_subreddits_data_in_database"
        app:title="@string/settings_delete_all_communities_data_in_database_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="delete_all_users_data_in_database"
        app:title="@string/settings_delete_all_users_data_in_database_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="delete_all_sort_type_data_in_database"
        app:title="@string/settings_delete_all_sort_type_data_in_database_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="delete_all_post_layout_data_in_database"
        app:title="@string/settings_delete_all_post_layout_data_in_database_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="delete_all_themes_in_database"
        app:title="@string/settings_delete_all_themes_in_database_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="delete_front_page_scrolled_positions_in_database"
        app:title="@string/settings_delete_front_page_scrolled_positions_in_database_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="delete_read_posts_in_database"
        app:title="@string/settings_delete_read_posts_in_database_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="delete_all_legacy_settings"
        app:title="@string/settings_delete_all_legacy_settings_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="reset_all_settings"
        app:title="@string/settings_reset_all_settings_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="backup_settings"
        app:title="@string/settings_backup_settings_title"
        app:summary="@string/settings_backup_settings_summary" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="restore_settings"
        app:title="@string/settings_restore_settings_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_crash_reports_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.CrashReportsFragment" />

</PreferenceScreen>