<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_font_title"
        app:icon="@drawable/ic_font_size_24dp"
        app:fragment="eu.toldi.infinityforlemmy.settings.FontPreferenceFragment" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:key="immersive_interface_entry"
        app:title="@string/settings_immersive_interface_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.ImmersiveInterfacePreferenceFragment"
        app:isPreferenceVisible="false" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_navigation_drawer_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.NavigationDrawerPreferenceFragment" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_customize_tabs_in_main_page_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.CustomizeMainPageTabsFragment" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_customize_bottom_app_bar_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.CustomizeBottomAppBarFragment" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_fab_in_post_feed"
        app:title="@string/settings_hide_fab_in_post_feed" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="use_circular_fab"
        app:title="@string/use_circular_fab" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="bottom_app_bar"
        app:title="@string/settings_enable_bottom_app_bar_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_subreddit_description"
        app:title="@string/settings_hide_community_description_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="use_bottom_toolbar_in_media_viewer"
        app:title="@string/settings_use_bottom_toolbar_in_media_viewer_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontListPreference
        app:defaultValue="0"
        app:entries="@array/settings_default_search_result_tab"
        app:entryValues="@array/settings_default_search_result_tab_values"
        app:key="default_search_result_tab"
        app:title="@string/settings_default_search_result_tab"
        app:useSimpleSummaryProvider="true" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_time_format_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.TimeFormatPreferenceFragment" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_category_post_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.PostPreferenceFragment" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_post_details_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.PostDetailsPreferenceFragment" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:title="@string/settings_category_comment_title"
        app:fragment="eu.toldi.infinityforlemmy.settings.CommentPreferenceFragment" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreferenceCategory
        app:title="@string/settings_category_post_and_comment_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="vote_buttons_on_the_right"
        app:title="@string/settings_vote_buttons_on_the_right_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="true"
        app:key="show_absolute_number_of_votes"
        app:title="@string/settings_show_absolute_number_of_votes_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreferenceCategory app:title="@string/settings_category_community_and_user_pages_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="true"
        app:key="show_statistics"
        app:title="@string/settings_show_statistics" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="true"
        app:key="show_score"
        app:title="@string/settings_show_post_and_comment_score" />

</PreferenceScreen>