<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="true"
        app:key="separate_post_and_comments_in_landscape_mode"
        app:title="@string/settings_separate_post_and_comments_in_landscape_mode_title"
        app:summary="@string/settings_separate_post_and_comments_summary" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_post_type"
        app:title="@string/settings_hide_post_type" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_post_flair"
        app:title="@string/settings_hide_post_flair" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_upvote_ratio"
        app:title="@string/settings_hide_upvote_ratio_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_subreddit_and_user_prefix"
        app:title="@string/settings_hide_community_and_user_prefix" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_the_number_of_votes"
        app:title="@string/settings_hide_the_number_of_votes" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="true"
        app:key="post_detail_separate_down_and_up_votes"
        app:title="@string/separate_down_and_up_votes" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_the_number_of_comments"
        app:title="@string/settings_hide_the_number_of_comments" />

</PreferenceScreen>