<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:icon="@drawable/ic_info_preference_24dp"
        app:summary="@string/restart_app_see_changes"
        app:enabled="false" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="show_avatar_on_the_right"
        app:title="@string/settings_show_avatar_on_the_right" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_account_section"
        app:title="@string/settings_collapse_account_section_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_reddit_section"
        app:title="@string/settings_collapse_reddit_section_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_post_section"
        app:title="@string/settings_collapse_post_section_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_preferences_section"
        app:title="@string/settings_collapse_preferences_section_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_favorite_subreddits_section"
        app:title="@string/settings_collapse_favorite_communities_section_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="collapse_subscribed_subreddits_section"
        app:title="@string/settings_collapse_subscribed_communities_section_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_favorite_subreddits_sections"
        app:title="@string/settings_hide_favorite_communities_sections_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_subscribed_subreddits_sections"
        app:title="@string/settings_hide_subscribed_communities_sections_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="hide_account_karma"
        app:title="@string/settings_navigation_drawer_enable_hide_karma_title" />


</PreferenceScreen>