<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="save_front_page_scrolled_position"
        app:title="@string/settings_save_front_page_scrolled_position_title"
        app:summary="@string/settings_save_front_page_scrolled_position_summary" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontListPreference
        app:defaultValue="0"
        app:entries="@array/link_handler"
        app:entryValues="@array/link_handler_values"
        app:icon="@drawable/ic_link"
        app:key="link_handler"
        app:title="@string/settings_link_handler_title"
        app:useSimpleSummaryProvider="true" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontListPreference
        app:defaultValue="0"
        app:entries="@array/main_page_back_button_action"
        app:entryValues="@array/main_page_back_button_action_values"
        app:key="main_page_back_button_action"
        app:icon="@drawable/ic_exit_24dp"
        app:title="@string/settings_main_page_back_button_action"
        app:useSimpleSummaryProvider="true" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="true"
        app:key="enable_search_history"
        app:title="@string/settings_enable_search_history_title"
        app:summary="@string/only_for_logged_in_user" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontListPreference
        app:defaultValue="auto"
        app:entries="@array/settings_language"
        app:entryValues="@array/settings_language_values"
        app:key="language"
        app:icon="@drawable/ic_language_24dp"
        app:title="@string/settings_language_title"
        app:useSimpleSummaryProvider="true" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontEditTextPreference
        app:defaultValue="https://lemmy.world"
        app:key="anonymous_account_instance"
        app:title="@string/anonymous_account_instance"
        app:useSimpleSummaryProvider="true" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontSwitchPreference
        app:defaultValue="false"
        app:key="share_link_on_local_instance"
        app:title="@string/share_links_on_your_local_instance"
        app:summary="@string/share_links_on_your_local_instance_rather_than_the_original_creation_instance" />

    <ListPreference
        app:key="icon_preference"
        app:title="Change App Icon"
        app:entries="@array/icon_labels"
        app:entryValues="@array/icon_values"
        app:defaultValue="default_icon" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreferenceCategory app:title="@string/settings_miscellaneous_dangerous_group_title" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontPreference
        app:icon="@drawable/ic_info_preference_24dp"
        app:summary="@string/settings_post_feed_max_resolution_warning_title"
        app:enabled="false" />

    <eu.toldi.infinityforlemmy.customviews.CustomFontEditTextPreference
        app:defaultValue="5000000"
        app:key="post_feed_max_resolution"
        app:title="@string/settings_post_feed_max_resolution_title"
        app:useSimpleSummaryProvider="true" />


</PreferenceScreen>